fixed image,updated code

--- a/Silver.html
+++ b/Silver.html
@@ -71,17 +71,17 @@
             <!-- the table ends here -->
         </div>
         <div class="col-md-3 bg-primary text-light">
-            <img src="/images/watch2.jpg" alt="" height="200px" width="200px">
+            <img src="images/watch2.jpg" alt="" height="200px" width="200px">
             <h6><u>Silver Dress Watch</u></h6>
             <p>A silver dress watch is sleek, minimal, and elegant. It usually has a thin silver case, a simple dial (often white or black), and either a leather strap or a refined metal bracelet. These watches are designed to be worn with formal or business attire and focus more on style than extra features. </p>
         </div>
         <div class="col-md-3 bg-primary text-light">
-            <img src="/images/watch3.jpg" alt="" height="200px" width="200px">
+            <img src="images/watch3.jpg" alt="" height="200px" width="200px">
             <h6><u>Silver Chronograph Watch</u></h6>
             <p>This type combines a silver case with sporty functionality. A silver chronograph watch includes multiple sub-dials and pushers on the side that allow it to act as a stopwatch. It’s popular for people who want a bold, eye-catching watch that works for both casual wear and active use.</p>
         </div>
         <div class="col-md-3 bg-primary text-light">
-            <img src="/images/watch4.jpg" alt="" height="200px" width="200px">
+            <img src="images/watch4.jpg" alt="" height="200px" width="200px">
             <h6><u> Dive Watch</u></h6>
             <p>A silver dive watch is built for durability and water resistance. It typically has a stainless-silver case, a rotating bezel, luminous hands and markers, and a sturdy bracelet. While designed for underwater use, it’s also worn as a rugged everyday watch thanks to its strong, masculine look.</p>
 
@@ -121,7 +121,7 @@
           </div>
           <!-- card body starts here -->
           <div class="card-body">
-            <img src="/images/ring2.jpg" alt="" height="300px" width="100%">
+            <img src="images/ring2.jpg" alt="" height="300px" width="100%">
           </div>
           <!-- card footer starts here -->
           <div class="card-footer bg-success text-light">
@@ -142,7 +142,7 @@
           </div>
           <!-- card body starts here -->
           <div class="card-body">
-            <img src="/images/ring3.jpg" alt="" height="300px" width="100%">
+            <img src="images/ring3.jpg" alt="" height="300px" width="100%">
           </div>
           <!-- card footer starts here -->
           <div class="card-footer bg bg-success text-light">
@@ -170,7 +170,7 @@
           </div>
           <!-- card body starts here -->
           <div class="card-body">
-            <img src="/images/brace1.jpg" alt="" height="300px" width="100%">
+            <img src="images/brace1.jpg" alt="" height="300px" width="100%">
           </div>
           <!-- card footer starts here -->
           <div class="card-footer bg-warning text-dark">
@@ -191,7 +191,7 @@
           </div>
           <!-- card body starts here -->
           <div class="card-body">
-            <img src="/images/brace2.jpg" alt="" height="300px" width="100%">
+            <img src="images/brace2.jpg" alt="" height="300px" width="100%">
           </div>
           <!-- card footer starts here -->
           <div class="card-footer bg-warning text-dark">
@@ -213,7 +213,7 @@
           </div>
           <!-- card body starts here -->
           <div class="card-body">
-            <img src="/images/brace4.jpg" alt="" height="300px" width="100%">
+            <img src="images/brace4.jpg" alt="" height="300px" width="100%">
           </div>
           <!-- card footer starts here -->
           <div class="card-footer bg-warning text-dark">
@@ -251,13 +251,13 @@
     <div class="col-md-4">
         <h2 class="text-light text-center">Stay connected</h2><br>
         <a href="https://www.facebook.com">
-            <img src="/images/fb.png" alt="">
+            <img src="images/fb.png" alt="">
         </a>
         <a href="https://www.instagram.com">
-            <img src="/images/in.png" alt="">
+            <img src="images/in.png" alt="">
         </a>
         <a href="https://www.x.com">
-            <img src="/images/x.png" alt="">
+            <img src="images/x.png" alt="">
         </a><br><br>
         <p>Stay connected with us for early access to new collections, private previews, and curated insights from our atelier. Be part of an inner circle where craftsmanship, elegance, and timeless design meet.</p>
     </div>
