--- a/about.html
+++ b/about.html
@@ -34,38 +34,22 @@
   </section> 
 </body>
 <!-- section 4 begins here -->
-<section class="row p-4 bg-primary">
-      <div class="col-md-12">
-         </div>
-      </div>
-     
-    <div class="col-md-4 text-light">
-        <h2 class="text-center text-light">About us</h2>
-        <p>We create jewelry that is meant to be worn with meaning. Each piece is thoughtfully designed to balance timeless elegance with modern expression, celebrating individuality and the moments that matter most. Guided by a love for craftsmanship and detail, we use quality materials and careful techniques to create jewelry that feels personal, enduring, and effortlessly beautiful. Our goal is simple: to offer pieces that become part of your story, today and for years to come.</p>
-        <p>At the heart of our brand is a love for beautiful, meaningful jewelry. We carefully design each piece to be timeless, easy to wear, and made to last. Whether you’re celebrating a special moment or adding a touch of beauty to your everyday life, our jewelry is created to feel personal and truly yours.</p>
-    </div>
-    <div class="col-md-4">
-        <h2 class="text-light text-center">Contact us</h2>
-        <form>
-            <input type="email" placeholder="enter your email" class="form-control"><br><br>
-            <textarea col="7" rows="7" placeholder="leave your comment"  class="form-control"></textarea><br><br>
-            <input type="submit" value="send message" class="btn btn-outline-danger">
-        </form>
-    </div>
-    <div class="col-md-4">
-        <h2 class="text-light text-center">Stay connected</h2><br>
-        <a href="https://www.facebook.com">
-            <img src="/images/fb.png" alt="">
-        </a>
-        <a href="https://www.instagram.com">
-            <img src="/images/in.png" alt="">
-        </a>
-        <a href="https://www.x.com">
-            <img src="/images/x.png" alt="">
-        </a><br><br>
-        <p>Stay connected with us for early access to new collections, private previews, and curated insights from our atelier. Be part of an inner circle where craftsmanship, elegance, and timeless design meet.</p>
-    </div>
-  </section>
+<section class="row">
+  <div class="col-md-6">
+   <img src="images/delivery.jpg" alt="" height="600px" width="600px">
+  </div>
+  <div class="col-md-6">
+    <h1>About us</h1>
+    <p>
+
+We are a modern jewelry store in Parklands, Nairobi, offering elegant, high-quality pieces for every occasion. Our collection blends timeless design with contemporary style, crafted to be worn and cherished.
+
+<br>Contact<br>
+
+📍 Location: Parklands, Nairobi<br>
+📞 Phone: +254 721 777 777</p>
+  </div>
+</section>
   <!-- section 4 ends here -->
   <footer class="text-light bg-dark text-center p-2">
     <h5>Developed by scarD. &copy; 2026. All rights served</h5>
