--- a/gold.html
+++ b/gold.html
@@ -36,7 +36,7 @@
   <h1 style="text-indent: 20px; color: blue;"><u>Watches...</u></h1>
   <section class="row">
     <div class="col-md-6">
-     <img src="/images/watch3.jpg" alt="" height="400px" width="100%">
+     <img src="images/watch3.jpg" alt="" height="400px" width="100%">
     </div>
     <div class="col-md-6">
         <h6>Rolex Day-Date (18k Gold)</h6> <br>
@@ -59,7 +59,7 @@ Ideal for: Dressy occasions and collectors seeking classic luxury</p>
   </section><br>
   <section class="row">
     <div class="col-md-6">
-     <img src="/images/watch2.jpg" alt="" height="400px" width="100%">
+     <img src="images/watch2.jpg" alt="" height="400px" width="100%">
     </div>
     <div class="col-md-6">
         <h6>Patek Philippe Calatrava (Gold Models)</h6> <br>
@@ -69,13 +69,14 @@ Ideal for: Dressy occasions and collectors seeking classic luxury</p>
             <span class="bg-danger badge">10% off</span><br>
             <button class="bg-primary text-light btn btn-otline-danger">Add to cart</button>
     </div>
-  </section>
+  </section><br><hr>
+  <h2 style="color: blue; text-indent: 10px;"><u>Engagement rings..</u></h2>
   <section class="row text-center">
         <div class="col-md-3">
-            <img src="/images/Product1.jpg" alt="" height="400px">
+            <img src="images/gring2.jpg" alt="" height="400px">
         </div>
         <div class="col-md-3 bg-light text-dark">
-            <img src="/images/Product2.jpg" alt="" height="200px" width="200px">
+            <img src="images/gring1.jpg" alt="" height="200px" width="200px">
             <h6>Gold Band Ring</h6>
             <p>A simple, smooth ring made from yellow, white, or rose gold. Timeless and versatile—often used as a wedding band or everyday wear.</p>
             <b class="text-warning">$300</b><br>
@@ -83,7 +84,7 @@ Ideal for: Dressy occasions and collectors seeking classic luxury</p>
             <button class="bg-primary text-light btn btn-otline-danger">Add to cart</button>
         </div>
         <div class="col-md-3 bg-light text-dark">
-            <img src="/images/Product3.jpg" alt="" height="200px" width="200px">
+            <img src="images/gring3.jpg" alt="" height="200px" width="200px">
             <h6>Signet Ring</h6>
             <p>Traditionally a flat-topped gold ring engraved with initials, a crest, or a symbol. Historically worn by royalty and nobles; today it signals heritage, confidence, and style.</p>
             <b class="text-warning">$1,200</b><br>
@@ -91,9 +92,9 @@ Ideal for: Dressy occasions and collectors seeking classic luxury</p>
             <button class="bg-primary text-light btn btn-otline-danger">Add to cart</button>
         </div>
         <div class="col-md-3 bg-light text-dark">
-            <img src="/images/Product4.jpg" alt="" height="200px" width="200px">
+            <img src="images/gring4.jpg" alt="" height="200px" width="200px">
             <h6>Solitaire Gold Ring</h6>
-            <p></b><br>
+            <p>This means the ring showcases a single gemstone — most often a diamond — mounted prominently on its own. The focus is on that one stone, with minimal metal or side accents to distract from its shape, sparkle, and size.</b><br>
             <span class="bg-danger badge">20% off</span><br>
             <button class="bg-primary text-light btn btn-otline-danger">Add to cart</button>
 
@@ -122,13 +123,13 @@ Ideal for: Dressy occasions and collectors seeking classic luxury</p>
     <div class="col-md-4">
         <h2 class="text-light text-center">Stay connected</h2><br>
         <a href="https://www.facebook.com">
-            <img src="/images/fb.png" alt="">
+            <img src="images/fb.png" alt="">
         </a>
         <a href="https://www.instagram.com">
-            <img src="/images/in.png" alt="">
+            <img src="images/in.png" alt="">
         </a>
         <a href="https://www.x.com">
-            <img src="/images/x.png" alt="">
+            <img src="images/x.png" alt="">
         </a><br><br>
         <p>Stay connected with us for early access to new collections, private previews, and curated insights from our atelier. Be part of an inner circle where craftsmanship, elegance, and timeless design meet.</p>
     </div>
