--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <!-- section 2 starts here -->
    <section class="row" style="background-color: rgb(228, 231, 46);">
      <div class="col-md-6">
-        <img src="/images/watch3.jpg" alt="" height="400px" width="90%">
+        <img src="images/watch3.jpg" alt="" height="400px" width="90%">
      </div>
      <div class="col-md-6">
    <h1 style=" text-decoration: double; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: white;" class="bg-danger">Where Elegance Becomes Personal!!
@@ -70,10 +70,10 @@ Find the piece that feels like it was meant for you.</p>
             <img src="images/Bead7.jpg" alt="" class="d-block w-100" height="400px">
            </div>
            <div class="carousel-item">
-            <img src="/images/Product8.jpg" alt="" class="d-block w-100" height="400px">
+            <img src="images/Product8.jpg" alt="" class="d-block w-100" height="400px">
            </div>
            <div class="carousel-item active">
-            <img src="/images/Silver8.jpg" alt="" class="d-block w-100" height="400px">
+            <img src="images/Silver8.jpg" alt="" class="d-block w-100" height="400px">
            </div>
            <div class="carousel-item"> 
             <img src="images/watch4.jpg" alt="" class="d-block w-100" height="400px">
@@ -104,10 +104,10 @@ Find the piece that feels like it was meant for you.</p>
      <h1 style="text-indent: 400px;" color="text-dark"><u>Gold products.</u></h1>
   <section class="row text-center">
         <div class="col-md-3">
-            <img src="/images/Product1.jpg" alt="" height="400px">
+            <img src="images/Product1.jpg" alt="" height="400px">
         </div>
         <div class="col-md-3 bg-light text-dark">
-            <img src="/images/Product2.jpg" alt="" height="200px" width="200px">
+            <img src="images/Product2.jpg" alt="" height="200px" width="200px">
             <h6>Timeless elegance</h6>
             <p>Handcrafted 24k old pieces .Sine your day out with the african gold on you.our products are all licensed and health accredited </p>
             <b class="text-warning">$300</b><br>
@@ -115,7 +115,7 @@ Find the piece that feels like it was meant for you.</p>
             <button class="bg-primary text-light btn btn-otline-danger">Add to cart</button>
         </div>
         <div class="col-md-3 bg-light text-dark">
-            <img src="/images/Product3.jpg" alt="" height="200px" width="200px">
+            <img src="images/Product3.jpg" alt="" height="200px" width="200px">
             <h6>Everlasting chain</h6>
             <p>Solid 18k yellow gold minimalist chain,perfect for daily outwear and matching all outfits for wealthy appearances.This product comes with an offer if bought two ,you get another piece of the everlasting chain .</p>
             <b class="text-warning">$1,200</b><br>
@@ -123,7 +123,7 @@ Find the piece that feels like it was meant for you.</p>
             <button class="bg-primary text-light btn btn-otline-danger">Add to cart</button>
         </div>
         <div class="col-md-3 bg-light text-dark">
-            <img src="/images/Product4.jpg" alt="" height="200px" width="200px">
+            <img src="images/Product4.jpg" alt="" height="200px" width="200px">
             <h6>Everlink Chains</h6>
             <p>Quality chain,Intricately detailed with vintage charm, these antique silver filigree beads elevate bracelets and pendants with a classic, ornamental aesthetic.</p>
             <b class="text-warning">$30</b><br>
@@ -137,7 +137,7 @@ Find the piece that feels like it was meant for you.</p>
        <h2 style="color: red; text-indent: 300px;">Find your best choice product!!!</h2>
   <section class="row">
         <div class="col-md-4">
-            <img src="/images/Bead8.jpg" alt="" height="400px" width="97%">
+            <img src="images/Bead8.jpg" alt="" height="400px" width="97%">
         </div>
         
         <div class="col-md-4">
@@ -245,13 +245,13 @@ Find the piece that feels like it was meant for you.</p>
     <div class="col-md-4">
         <h2 class="text-light text-center">Stay connected</h2><br>
         <a href="https://www.facebook.com">
-            <img src="/images/fb.png" alt="">
+            <img src="images/fb.png" alt="">
         </a>
         <a href="https://www.instagram.com">
-            <img src="/images/in.png" alt="">
+            <img src="images/in.png" alt="">
         </a>
         <a href="https://www.x.com">
-            <img src="/images/x.png" alt="">
+            <img src="images/x.png" alt="">
         </a><br><br>
         <p>Stay connected with us for early access to new collections, private previews, and curated insights from our atelier. Be part of an inner circle where craftsmanship, elegance, and timeless design meet.</p>
     </div>
